# server/src/dtos/Order/CreateOrderDTO.ts
@@ -1,7 +1,0 @@
-import { TableInfo } from "../../models/TableInfo";
-
-export class CreateOrderDTO {
-  public PeopleName: string;
-  public Complete: boolean;
-  public TableInfo: TableInfo;
-}
